03_TestApp/02_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapp
  namespace: testapp-keda
  labels:
    app: testapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testapp
  template:
    metadata:
      labels:
        app: testapp
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8090"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: testapp
        image: quay.io/rhn_support_nigsmith/testapp-threepilars:latest
        ports:
        - containerPort: 8090
          name: http
          protocol: TCP
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
