03_TestApp/03_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: testapp
  namespace: testapp-keda
  labels:
    app: testapp
spec:
  type: ClusterIP
  ports:
  - port: 8090
    targetPort: 8090
    protocol: TCP
    name: http
  selector:
    app: testapp
