03_TestApp/04_route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: testapp
  namespace: testapp-keda
  labels:
    app: testapp
spec:
  to:
    kind: Service
    name: testapp
  port:
    targetPort: http
